--- a/front/src/components/InputCadastro.module.css
+++ b/front/src/components/InputCadastro.module.css
@@ -1,7 +1,8 @@
 .inputs{
     border: none ;
-    border-radius: 3px;
-    box-shadow: 0px 3px rgba(0, 0, 0, 0.2);
-    width: 17vw;
-    height: 3.5vh;
+    border-radius: 3.5px;
+    box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+    width: 22vw;
+    height: 5vh;
+    margin-bottom: 10px;
 }
