--- a/front/src/components/TituloCadastro.module.css
+++ b/front/src/components/TituloCadastro.module.css
@@ -1,11 +1,12 @@
 .titulo{
-    font-size: 42px;
-    margin: 0px;
+    font-size: 60px;
+    margin: -30px;
     font-weight: bold;
+    margin-top: -50px;
 }
 
 .titulo2{
-    font-size: 42px;
+    font-size: 70px;
     margin: 0px;
     color: #8C52FF;
     font-weight: bold;
