--- a/front/src/components/InputCadastro.module.css
+++ b/front/src/components/InputCadastro.module.css
@@ -2,7 +2,9 @@
     border: none ;
     border-radius: 3.5px;
     box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
-    width: 22vw;
+    max-width: 25vw;
+    width: 100%;
     height: 5vh;
     margin-bottom: 10px;
+    outline: none;
 }
