--- a/front/src/components/Login.module.css
+++ b/front/src/components/Login.module.css
@@ -1,4 +1,4 @@
-/* CardCadastro.module.css */
+/* Login.module.css */
 .background {
     display: flex;
     justify-content: center;
@@ -10,31 +10,36 @@
 .card {
     background: white;
     border-radius: 10px;
-    padding: 40px 50px;
+    padding: 5vw 6vw;
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
-    width: 300px;
+    width: 80%;
+    max-width: 400px;
     text-align: center;
+    box-sizing: border-box;
 }
 
 .logoSection {
-    margin-bottom: 30px;
+    margin-bottom: 5vw;
 }
 
 .logo {
-    width: 50px;
+    width: 40%;
+    max-width: 150px;
     margin-bottom: 10px;
 }
 
 .title {
-    font-size: 36px;
+    font-size: 2.5vw;
     font-weight: bold;
     color: #8C52FF;
 }
 
 .subtitle {
-    font-size: 18px;
+    font-size: 1.2em;
     color: #8C52FF;
-    margin-bottom: 30px;
+    margin-bottom: 3vw;
+    margin-top: -1.5em;
+    margin-left: 1vw;
 }
 
 .form {
@@ -45,9 +50,9 @@
 .input {
     border: 1px solid #DDD;
     border-radius: 5px;
-    padding: 10px;
-    margin-bottom: 15px;
-    font-size: 16px;
+    padding: 1em;
+    margin-bottom: 1em;
+    font-size: 1em;
 }
 
 .button {
@@ -55,7 +60,35 @@
     color: white;
     border: none;
     border-radius: 5px;
-    padding: 10px;
+    padding: 1em;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 1em;
+}
+
+/* Media Queries */
+@media (max-width: 768px) {
+    .card {
+        width: 90%;
+        padding: 6vw 8vw;
+    }
+
+    .logo {
+        width: 50%;
+    }
+}
+
+@media (max-width: 480px) {
+    .card {
+        width: 95%;
+        padding: 8vw 10vw;
+    }
+
+    .logo {
+        width: 60%;
+    }
+
+    .input, .button {
+        font-size: 0.9em;
+        padding: 0.8em;
+    }
 }
