--- a/front/src/components/Login.module.css
+++ b/front/src/components/Login.module.css
@@ -1,61 +1,101 @@
-/* CardCadastro.module.css */
-.background {
+.container {
+    background-image: url('/public/banner.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    background: linear-gradient(180deg, #6A1B9A 0%, #8E24AA 100%);
 }
-
-.card {
-    background: white;
-    border-radius: 10px;
-    padding: 40px 50px;
-    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
-    width: 300px;
-    text-align: center;
+.loginImg{
+    width: 200px;
+    height: 109px;
+    transform: translate(27%, 45%);
 }
-
-.logoSection {
-    margin-bottom: 30px;
+.centered-card {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 23px;
 }
-
-.logo {
-    width: 50px;
-    margin-bottom: 10px;
+.espacao{
+    padding: 30px;
 }
-
-.title {
-    font-size: 36px;
-    font-weight: bold;
-    color: #8C52FF;
+.espaco{
+    padding: 20px;
 }
-
-.subtitle {
-    font-size: 18px;
-    color: #8C52FF;
-    margin-bottom: 30px;
-}
-
-.form {
-    display: flex;
-    flex-direction: column;
-}
-
 .input {
-    border: 1px solid #DDD;
-    border-radius: 5px;
-    padding: 10px;
-    margin-bottom: 15px;
     font-size: 16px;
+    padding: 0px 3px 12px 122px;
+    display: block;
+    width: 159px;
+    border: none;
+    border-bottom: 1px solid #515151;
+    background: transparent;
+    transform: translate(7%, 52%);
+}
+.input::placeholder {
+    color: rgba(0, 0, 0, 0.3);
+    font-size: 13px;
+}
+.input:focus {
+    outline: none;
 }
 
-.button {
-    background: #8C52FF;
+label {
+    color: #999;
+    font-size: 18px;
+    font-weight: normal;
+    position: absolute;
+    pointer-events: none;
+    left: 5px;
+    top: 10px;
+    transition: 0.2s ease all;
+    -moz-transition: 0.2s ease all;
+    -webkit-transition: 0.2s ease all;
+}
+
+.input:focus ~ label, .input:valid ~ label {
+    top: -20px;
+    font-size: 14px;
+    color: #5264AE;
+}
+
+.bar {
+    position: relative;
+    display: block;
+    width: 200px;
+}
+
+.bar:before {
+    left: 50%;
+}
+
+.bar:after {
+    right: 50%;
+}
+
+.input:focus ~ .bar:before, .input:focus ~ .bar:after {
+    width: 50%;
+}
+
+.highlight {
+    position: absolute;
+    height: 60%;
+    width: 100px;
+    top: 25%;
+    left: 0;
+    pointer-events: none;
+    opacity: 0.5;
+}
+.button{
+    width: 158px;
+    height: 30px;
+    border-radius: 30px;
+    background-color: #8C52FF;
     color: white;
     border: none;
-    border-radius: 5px;
-    padding: 10px;
-    cursor: pointer;
-    font-size: 16px;
+    transform: translate(50%, -65%);
 }
