--- a/front/src/components/TituloCadastro.module.css
+++ b/front/src/components/TituloCadastro.module.css
@@ -12,3 +12,12 @@
     font-weight: bold;
 }
 
+@media (max-width: 768px) {
+    .titulo{
+        font-size: 50px;
+        margin-top: 5px;
+    }
+    .titulo2{
+        font-size: 60px;
+    }
+}
