--- a/front/src/components/DashBoard.module.css
+++ b/front/src/components/DashBoard.module.css
@@ -1,20 +1,20 @@
 .dashboardContainer {
     display: flex;
-    height: 100vh; /* Para garantir que ocupe a altura total da tela */
+    height: 100vh;
 }
 
 .content {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center; /* Centraliza verticalmente o conteúdo */
-    align-items: center; /* Centraliza horizontalmente o conteúdo */
-    margin-left: 20px; /* Ajuste o valor conforme necessário */
+    justify-content: center;
+    align-items: center;
+    margin-left: 20px;
 }
 
 .sliderContainer {
     width: 100%;
-    max-width: 1000px; /* Ajuste o valor conforme necessário para aumentar a largura */
+    max-width: 1000px;
     margin: 0 auto;
 }
 .ola{
@@ -31,7 +31,7 @@
 .slide {
     display: flex;
     justify-content: center;
-    width: 100%; /* Garante que cada slide ocupe 100% da largura */
+    width: 100%;
 }
 
 .slideImage {
