--- a/front/src/components/Calendario.module.css
+++ b/front/src/components/Calendario.module.css
@@ -36,6 +36,7 @@
 }
 
 .holidayItem {
+    display: flex;
     align-items: center;
     margin-bottom: 20px;
     border-radius: 10px;
@@ -44,14 +45,9 @@
     box-shadow: -3px 7px 8px -2px rgba(0,0,0,0.30);
 }
 
-.holidayItemImage {
+.holidayContent {
+    display: flex;
     align-items: center;
-    margin-bottom: 20px;
-    border-radius: 10px;
-    padding: 10px;
-    border: 1px solid;
-    box-shadow: -3px 7px 8px -2px rgba(0,0,0,0.30);
-    width: 40px;
 }
 
 .holidayImage {
@@ -60,5 +56,3 @@
     margin-right: 10px;
     object-fit: cover;
 }
-
-
