--- a/front/src/components/Calendario.module.css
+++ b/front/src/components/Calendario.module.css
@@ -50,9 +50,20 @@
     box-shadow: -3px 7px 8px -2px rgba(0,0,0,0.30);
 }
 
+.holidayItemImage {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    padding: 10px;
+    border: 1px solid;
+    box-shadow: -3px 7px 8px -2px rgba(0,0,0,0.30);
+    width: 50%;
+    margin-left: 15px;
+}
+
 .holidayImage {
     width: 30px;
     height: 30px;
-    margin-right: 10px;
     object-fit: cover;
 }
