--- a/front/src/components/DashBoard.module.css
+++ b/front/src/components/DashBoard.module.css
@@ -18,8 +18,9 @@
     margin: 0 auto;
 }
 .ola{
+    font-size: 30px;
     position: relative;
-    right: 220px;
+    right: 170px;
 }
 
 .slider {
