--- a/front/src/components/DashBoard.module.css
+++ b/front/src/components/DashBoard.module.css
@@ -2,14 +2,13 @@
     margin-top: 30px;
     height: 100vh;
 }
-
 .content {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-left: 20px;
+    margin-left: 230px;
 }
 
 .sliderContainer {
@@ -17,16 +16,13 @@
     max-width: 1000px;
     margin: 0 auto;
 }
-.ola{
+
+.ola {
     font-size: 30px;
     position: relative;
-    right: 170px;
+    right: 270px;
 }
 
-.slider {
-    height: 230px;
-    width: 70em;
-}
 
 .slide {
     display: flex;
@@ -35,9 +31,8 @@
 }
 
 .slideImage {
-    position: relative;
-    left: 100px;
     max-width: 100%;
-    width: 980px;
-    height: 234px;
+    width: 100%;
+    height: 280px;
+    object-fit: cover;
 }
