--- a/front/src/components/DashBoard.module.css
+++ b/front/src/components/DashBoard.module.css
@@ -36,6 +36,9 @@
     height: 280px;
     object-fit: cover;
 }
-.lnimg{
-    width: 40px;
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
 }
