--- a/front/src/components/TituloCadastro.module.css
+++ b/front/src/components/TituloCadastro.module.css
@@ -2,7 +2,7 @@
     font-size: 60px;
     margin: -30px;
     font-weight: bold;
-    margin-top: -50px;
+    margin-top: -22px;
 }
 
 .titulo2{
@@ -16,6 +16,7 @@
     .titulo{
         font-size: 50px;
         margin-top: 5px;
+        margin-inline: auto;
     }
     .titulo2{
         font-size: 60px;
