--- a/front/src/components/Calendario.module.css
+++ b/front/src/components/Calendario.module.css
@@ -28,11 +28,19 @@
 .tituloHoliday {
     margin-top: 25px;
     font-size: 25px;
+    color: #8A8C98;
 }
 
 .holidayList {
+    margin-top: 15px;
     list-style-type: none;
     padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    height: 200px;
+    overflow: auto;
+    width: 650px;
 }
 
 .holidayContent {
@@ -42,7 +50,6 @@
 
 .holidayItem {
     display: flex;
-    align-items: center;
     margin-bottom: 20px;
     border-radius: 10px;
     padding: 10px;
@@ -50,6 +57,7 @@
     box-shadow: -3px 7px 8px -2px rgba(0,0,0,0.30);
     width: 100%;
     margin-left: 15px;
+    flex-direction: column;
 }
 
 .holidayItemImage {
@@ -66,4 +74,74 @@
     width: 30px;
     height: 30px;
     object-fit: cover;
+}
+
+.holiday {
+    font-weight: bold;
+}
+
+.holidayData {
+    color: red;
+}
+
+.holidayItemNovo {
+    width: 48%;
+}
+
+
+
+
+.tituloProgra {
+    font-size: 25px;
+}
+
+.prograDia {
+    border-left: 1px solid;
+    border-color: #8A8C98;
+    padding: 20px;
+    color: #8A8C98
+}
+
+.prograList {
+    margin-top: 15px;
+    list-style-type: none;
+    padding: 0;
+    flex-wrap: wrap;
+    gap: 10px;
+    height: 600px;
+    overflow: auto;
+    width: 650px;
+}
+
+.prograContent {
+    display: flex;
+    align-items: center;
+}
+
+.prograItemImage {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    padding: 10px;
+    border: 1px solid;
+    box-shadow: -3px 7px 8px -2px rgba(0,0,0,0.30);
+}
+
+.prograItem {
+    display: flex;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    padding: 10px;
+    border: 1px solid;
+    box-shadow: -3px 7px 8px -2px rgba(0,0,0,0.30);
+    width: 100%;
+    margin-left: 15px;
+    flex-direction: column;
+}
+
+
+.prograTexto {
+    display: flex;
+    justify-content: space-between;
 }
