--- a/front/src/pages/CadastroProfessores.module.css
+++ b/front/src/pages/CadastroProfessores.module.css
@@ -4,7 +4,6 @@
     align-items: center;
     min-height: 100vh;
     background-color: #f5f5f5;
-    padding: 20px;
 }
 
 .card {
@@ -28,6 +27,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    border-radius: 0px 15px 15px 0px;
 }
 
 .divesquerda {
@@ -54,6 +54,14 @@
     grid-template-columns: 1fr 1fr;
     gap: 10px;
     width: 100%;
+}
+
+.select{
+    border: none;
+    border-radius: 3.5px;
+    padding: 6px;
+    width: 22vw;
+    box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
 }
 
 @media (max-width: 768px) {
