--- a/front/src/components/Calendario.module.css
+++ b/front/src/components/Calendario.module.css
@@ -16,7 +16,6 @@
     background: #fff;
     border-radius: 25px;
     padding: 20px;
-    box-shadow: -3px 7px 8px -2px rgba(0,0,0,0.82);
     margin-top: 20px;
     width: 600px;
 }
@@ -29,6 +28,7 @@
     margin-top: 25px;
     font-size: 25px;
     color: #8A8C98;
+    margin-left: 10px;
 }
 
 .holidayList {
@@ -53,8 +53,7 @@
     margin-bottom: 20px;
     border-radius: 10px;
     padding: 10px;
-    border: 1px solid;
-    box-shadow: -3px 7px 8px -2px rgba(0,0,0,0.30);
+    box-shadow: -3px 7px 8px -2px rgba(0,0,0,0.40);
     width: 100%;
     margin-left: 15px;
     flex-direction: column;
@@ -66,8 +65,8 @@
     margin-bottom: 20px;
     border-radius: 10px;
     padding: 10px;
-    border: 1px solid;
-    box-shadow: -3px 7px 8px -2px rgba(0,0,0,0.30);
+    box-shadow: -3px 7px 8px -2px rgba(0,0,0,0.40);
+    margin-left: 10px;
 }
 
 .holidayImage {
