--- a/front/src/components/DashBoard.module.css
+++ b/front/src/components/DashBoard.module.css
@@ -23,6 +23,7 @@
     font-size: 30px;
     position: relative;
     right: 270px;
+    color: #262A41
 }
 
 
@@ -44,36 +45,27 @@ footer {
     align-items: center;
     margin-bottom: 10px;
 }
-.q{
-    background-color: #D9D9D9;
-    width: 150px;
-    height: 100px;
-}
-.qq{
-    background-color: #D9D9D9;
-    width: 150px;
-    height: 100px;
-}
-.qqq{
-    background-color: #D9D9D9;
-    width: 150px;
-    height: 100px;
-}
+
 .qqqq{
     background-color: #D9D9D9;
-    width: 150px;
+    min-width: 150px;
     height: 100px;
 }
 .quad{
     position: relative;
     display: flex;
-    gap: 100px;
+    flex-direction: row;
+    gap: 40px;
     top: 20px;
+    overflow-x: auto;
+    width: 100%;
+    align-items: center;
+    margin-left: 90px;
 }
 #cadastrosd{
     position: relative;
     top: 60px;
-    color: #959db0;
+    color: #66697C;
     right: 430px;
 }
 .professores{
@@ -124,7 +116,7 @@ footer {
     text-align: center;
     border-radius: 8px;
     width: 180px;
-    height: 60px;
+    height: 45px;
     background-color: #FFFFFF;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -133,7 +125,7 @@ footer {
     border-radius: 8px;
     text-align: center;
     width: 180px;
-    height: 60px;
+    height: 45px;
     background-color: #FFFFFF;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -142,7 +134,7 @@ footer {
     border-radius: 8px;
     text-align: center;
     width: 180px;
-    height: 60px;
+    height: 45px;
     background-color: #FFFFFF;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -151,7 +143,7 @@ footer {
     border-radius: 8px;
     text-align: center;
     width: 180px;
-    height: 60px;
+    height: 45px;
     background-color: #FFFFFF;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -161,5 +153,6 @@ footer {
     right: 50px;
     display: flex;
     gap: 50px;
-    padding: 4px;
+    padding: 2px;
+
 }
