--- a/front/src/components/DashBoard.module.css
+++ b/front/src/components/DashBoard.module.css
@@ -164,3 +164,17 @@ footer {
     gap: 50px;
     padding: 4px;
 }
+
+body::-webkit-scrollbar {
+    width: 12px;
+}
+
+body::-webkit-scrollbar-track {
+    background: #D9D9D9;
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: #9364f3;
+    border-radius: 20px;
+    border: 3px solid #D9D9D9;
+}
