--- a/front/src/components/Dropdown.module.css
+++ b/front/src/components/Dropdown.module.css
@@ -19,13 +19,13 @@
 .dropdownButton {
     text-align: left;
     border-radius: 5px;
-    width: 1000px;
-    background-color: #5828B6;
+    width: 950px;
+    background-color: #8C52FF;
     color: white;
     font-family: "Poppins", sans-serif;
     font-weight: 500;
     letter-spacing: 1px;
-    padding: 20px;
+    padding: 15px;
     font-size: 21px;
     border: none;
     cursor: pointer;
@@ -34,7 +34,6 @@
 .dropdownContent {
     display: flex;
     flex-direction: column;
-    position: absolute;
     min-width: 160px;
     font-family: "Poppins", sans-serif;
     letter-spacing: 1px;
