--- a/front/src/components/Dropdown.module.css
+++ b/front/src/components/Dropdown.module.css
@@ -2,8 +2,13 @@
 
 .container {
     display: flex;
+    margin: 10px;
 }
-
+.imgzinha{
+width: 230px;
+height: 180px;
+border-radius: 7px;
+}
 .content {
     margin-left: 250px;
 }
@@ -18,7 +23,7 @@
 
 .dropdownButton {
     text-align: left;
-    border-radius: 5px;
+    border-radius: 2px;
     width: 950px;
     background-color: #8C52FF;
     color: white;
@@ -32,12 +37,15 @@
 }
 
 .dropdownContent {
+    justify-content: center;
+    align-items: center;
     display: flex;
     flex-direction: column;
     min-width: 160px;
     font-family: "Poppins", sans-serif;
     letter-spacing: 1px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    background-color: #8C52FF;
+    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.1);
     z-index: 1;
 }
 
@@ -68,5 +76,8 @@
     font-size: 17px;
 }
 .cardizin{
-    margin-right: 58px;
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 10px;
 }
