--- a/front/src/components/NavBarPerfil.module.css
+++ b/front/src/components/NavBarPerfil.module.css
@@ -13,13 +13,13 @@
 
 .principal {
     display: flex;
+    justify-content: center;
+    width: 100%;
+    box-shadow: -3px 7px 8px -2px rgba(0,0,0,0.30);
 }
 
-
-
-.programa {
-    border-left: 1px solid;
-    padding: 20px;
+.principalPerfil {
+    margin-top: 20px;
 }
 
 .perfil {
@@ -33,6 +33,7 @@
     gap: 10px;
     font-size: 20px;
     font-weight: bold;
+    justify-content: center;
 }
 
 .botao {
@@ -43,7 +44,7 @@
     border: none;
     background-color: var(--cor-principal);
     border-radius: 10px;
-    width: 100%;
+    width: 300px;
     justify-content: center;
     color: var(--branco);
     font-size: 20px;
@@ -51,11 +52,10 @@
 }
 
 .botaoImg {
-    background-color: #020202;
-    padding: 5px;
+    color: var(--cor-principal);
     border-radius: 40px;
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     box-shadow: -3px 7px 8px -2px rgba(0,0,0,0.30);
 }
 
