--- a/front/src/components/Dropdown.module.css
+++ b/front/src/components/Dropdown.module.css
@@ -22,8 +22,9 @@ border-radius: 7px;
 }
 
 .dropdownButton {
+    margin-left: -30px;
     text-align: left;
-    border-radius: 2px;
+    border-radius: 10px;
     width: 950px;
     background-color: #8C52FF;
     color: white;
@@ -37,6 +38,12 @@ border-radius: 7px;
 }
 
 .dropdownContent {
+    position: relative;
+    top: -10px;
+    right: 30px;
+    width: 950px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
     justify-content: center;
     align-items: center;
     display: flex;
