--- a/front/src/pages/ListaProfessores.module.css
+++ b/front/src/pages/ListaProfessores.module.css
@@ -4,6 +4,7 @@
     font-size: 30px;
     letter-spacing: 1px;
     position: relative;
+    top: 70px;
     left: 231px;
     font-family: "Poppins", sans-serif;
     color: #5e5c65;
