--- a/front/src/components/NavBarPerfil.module.css
+++ b/front/src/components/NavBarPerfil.module.css
@@ -17,14 +17,15 @@
 }
 
 .logoNav {
-    width: 100px;
     display: flex;
-    justify-content: center;
-    margin: 10px 0;
+    align-items: center;
 }
 
 .botaoImgLogo {
-    
+    border: none;
+    padding: 20px;
+    width: 100px;
+    height: 100px;
 }
 
 .principalPerfil {
