--- a/front/src/components/DashBoard.module.css
+++ b/front/src/components/DashBoard.module.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 .dashboardContainer {
     margin-top: 30px;
@@ -26,7 +26,6 @@
     color: #262A41
 }
 
-
 .slide {
     display: flex;
     justify-content: center;
@@ -49,118 +48,76 @@ footer {
 .qqqq{
     background-color: #D9D9D9;
     min-width: 150px;
-}
-.q{
-    background-color: #D9D9D9;
     width: 180px;
     height: 100px;
-}
-.qq{
-    background-color: #D9D9D9;
-    width: 180px;
-    height: 100px;
-}
-.qqq{
-    background-color: #D9D9D9;
-    width: 180px;
-    height: 100px;
-}
-.qqqq{
-    background-color: #D9D9D9;
-    width: 180px;
-    height: 100px;
-}
-.quad{
-    position: relative;
     display: flex;
-    flex-direction: row;
-    gap: 50px;
-    top: 20px;
-    overflow-x: auto;
-    width: 90%;
+    justify-content: center;
     align-items: center;
-    margin-left: 0;
 }
+.cardImage {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 8px;
+}
+.scrollContainer {
+    display: flex;
+    height: 122px;
+    margin-top: 31px;
+    overflow-x: auto;
+    width: 94%;
+    padding: 10px 0;
+    gap: 10px;
+}
+
+.scrollContainer::-webkit-scrollbar {
+    height: 12px;
+}
+
+.scrollContainer::-webkit-scrollbar-track {
+    background: #D9D9D9;
+}
+
+.scrollContainer::-webkit-scrollbar-thumb {
+    background-color: #9364f3;
+    border-radius: 20px;
+    border: 3px solid #D9D9D9;
+    padding: 2px;
+}
+
 #cadastrosd{
+    color: rgb(102, 105, 124);
     position: relative;
+    right: 448px;
     top: 60px;
-    color: #66697C;
-    right: 430px;
 }
-.professores{
+
+.qazul{
     font-family: "Poppins", sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     border-radius: 8px;
     width: 180px;
     height: 30px;
     color: #fff;
-    text-align: center;
-    background-color: #8C52FF;
-}
-.alunos{
-    font-family: "Poppins", sans-serif;
-    border-radius: 8px;
-    width: 180px;
-    height: 30px;
-    color: #fff;
-    text-align: center;
-    background-color: #8C52FF;
-}
-.cursos{
-    font-family: "Poppins", sans-serif;
-    border-radius: 8px;
-    width: 180px;
-    height: 30px;
-    color: #fff;
-    text-align: center;
-    background-color: #8C52FF;
-}
-.salas{
-    font-family: "Poppins", sans-serif;
-    border-radius: 8px;
-    width: 180px;
-    height: 30px;
-    color: #fff;
-    text-align: center;
     background-color: #8C52FF;
 }
 .cadss{
     position: relative;
     top: 70px;
-    right: 50px;
+    right: -2px;
     display: flex;
-    gap: 50px;
+    gap: 91px;
 }
-#cad1{
+#cad{
     font-family: "Poppins", sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     border-radius: 8px;
-    width: 180px;
-    height: 45px;
-    background-color: #FFFFFF;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-#cad2{
-    font-family: "Poppins", sans-serif;
-    border-radius: 8px;
-    text-align: center;
-    width: 180px;
-    height: 45px;
-    background-color: #FFFFFF;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-#cad3{
-    font-family: "Poppins", sans-serif;
-    border-radius: 8px;
-    text-align: center;
-    width: 180px;
-    height: 45px;
-    background-color: #FFFFFF;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-#cad4{
-    font-family: "Poppins", sans-serif;
-    border-radius: 8px;
-    text-align: center;
     width: 180px;
     height: 45px;
     background-color: #FFFFFF;
@@ -169,9 +126,9 @@ footer {
 .qbranco{
     position: relative;
     top: 70px;
-    right: 50px;
+    right: -2px;
     display: flex;
-    gap: 50px;
+    gap: 91px;
     padding: 4px;
 }
 
