--- a/front/src/components/Dropdown.module.css
+++ b/front/src/components/Dropdown.module.css
@@ -63,6 +63,7 @@ border-radius: 7px;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+    gap: 50px;
 }
 #email{
     font-family: "Poppins", sans-serif;
@@ -89,4 +90,16 @@ border-radius: 7px;
     border-radius: 10px;
     padding: 10px;
     margin: 10px;
+}
+.addButton{
+    background-color: #8C52FF;
+    width: 180px;
+    height: 25px;
+    border: none;
+    color: #fff;
+    border-radius: 5px;
+    position: relative;
+    left: 22px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
 }
