--- a/front/src/components/NavBarPerfil.module.css
+++ b/front/src/components/NavBarPerfil.module.css
@@ -18,13 +18,12 @@
     align-items: center;
     width: 100%;
     box-shadow: -3px 7px 8px -2px rgba(0,0,0,0.30);
+
 }
 
 .logoNav {
-    width: 100px;
-    display: flex;
-    justify-content: center;
-    margin: 10px 0;
+    padding: 10px;
+    background-color: #000;
 }
 
 .principalPerfil {
