--- a/front/src/components/Dropdown.module.css
+++ b/front/src/components/Dropdown.module.css
@@ -24,7 +24,6 @@ border-radius: 7px;
 }
 
 .dropdownButton {
-    margin-left: -30px;
     text-align: left;
     border-radius: 10px;
     width: 950px;
@@ -42,7 +41,6 @@ border-radius: 7px;
 .dropdownContent {
     position: relative;
     top: -10px;
-    right: 30px;
     width: 950px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -72,12 +70,14 @@ border-radius: 7px;
     color: #333;
     opacity: 90%;
 }
-.textmuted{
+.textmuted {
     color: #333;
     font-size: 12px;
     font-family: "Poppins", sans-serif;
     opacity: 70%;
     letter-spacing: 1px;
+    position: relative;
+    top: -36px;
 }
 #nomePro{
     font-family: "Poppins", sans-serif;
@@ -104,4 +104,37 @@ border-radius: 7px;
     left: 22px;
     font-family: "Poppins", sans-serif;
     font-weight: 500;
+}
+.editIcon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background: #8C52FF;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    position: relative;
+    top: 30px;
+    left: 240px;
+    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    border: none;
+}
+.deleteButton {
+    background: none;
+    border: none;
+    color: red;
+    cursor: pointer;
+    font-size: 1.2em;
+    margin-top: -60px;
+}
+.buttonContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+}
+#card-footer{
+    margin-top: -23px;
 }
