--- a/front/src/components/NavBarPerfil.module.css
+++ b/front/src/components/NavBarPerfil.module.css
@@ -12,23 +12,17 @@
 }
 
 .principal {
-    display: flex;
-    margin-top: 20px;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    box-shadow: -3px 7px 8px -2px rgba(0,0,0,0.30);
-
+    position: fixed;
 }
 
 .logoNav {
-    padding: 10px;
-    background-color: #000;
+
 }
 
 .principalPerfil {
 
 }
+
 
 .perfil {
     text-align: center;
@@ -60,7 +54,7 @@
     border-radius: 40px;
     width: 25px;
     height: 25px;
-    box-shadow: -3px 7px 8px -2px rgba(0,0,0,0.30);
+    box-shadow: -3px 7px 8px -2px rgba(0,0,0,0.60);
 }
 
 .botaoImgLogo {
@@ -85,6 +79,18 @@
     width: 25px;
     height: 25px;
 }
+
+
+
+
+
+
+
+
+
+
+
+/*PROGRAMA*/
 
 .tituloProgra {
     font-size: 25px;
