--- a/front/src/components/Login.module.css
+++ b/front/src/components/Login.module.css
@@ -121,13 +121,16 @@
     opacity: 0.5;
 }
 .button{
-    width: 158px;
-    height: 30px;
+    width: 185px;
+    height: 36px;
+    margin-top: 10px;
+    margin-left: -24px;
     background-color: #8C52FF;
     color: white;
     border: none;
-    border-radius: 5px;
+    border-radius: 21px;
     cursor: pointer;
+    font-weight: bold;
     font-size: 1em;
     transform: translate(49%, -65%);
 }
