--- a/front/src/components/NavBarPerfil.module.css
+++ b/front/src/components/NavBarPerfil.module.css
@@ -12,7 +12,17 @@
 }
 
 .principal {
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 20px;
+    height: 100vh;
     position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1;
 }
 
 .logoNav {
