--- a/front/src/components/Dropdown.module.css
+++ b/front/src/components/Dropdown.module.css
@@ -24,6 +24,9 @@ border-radius: 7px;
 }
 
 .dropdownButton {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     text-align: left;
     border-radius: 10px;
     width: 950px;
@@ -37,7 +40,6 @@ border-radius: 7px;
     border: none;
     cursor: pointer;
 }
-
 .dropdownContent {
     position: relative;
     top: -10px;
@@ -138,4 +140,8 @@ border-radius: 7px;
 }
 .editIcon a {
     color: white !important;
+}
+
+.dropdownIcon {
+    margin-left: auto;
 }
