--- a/front/src/components/CadastroMateria.module.css
+++ b/front/src/components/CadastroMateria.module.css
@@ -11,7 +11,7 @@
     border-radius: 15px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    box-shadow: 0px 5px rgba(0, 0, 0, 0.4);
+    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.4);
     width: 100%;
     max-width: 1200px;
     margin: 20px;
