--- a/front/src/components/CadastroSalas.module.css
+++ b/front/src/components/CadastroSalas.module.css
@@ -6,7 +6,7 @@
     border-radius: 15px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    box-shadow: 0px 5px rgba(0, 0, 0, 0.4);
+    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.4);
     margin: 0 auto; /* Centraliza o card */
 }
 
@@ -17,6 +17,7 @@
     align-items: center;
     justify-content: center;
     padding: 20px;
+    border-radius: 0px 15px 15px 0px;
 }
 
 .divesquerda {
