--- a/front/src/components/CadastroMateria.module.css
+++ b/front/src/components/CadastroMateria.module.css
@@ -73,7 +73,7 @@
     border-radius: 3.5px;
     padding: 6px;
     width: 34vw;
-    box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+    box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.2);
     outline: none;
 }
 
@@ -81,7 +81,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 80px;
+    gap: 95px;
 }
 
 .terceiroBlocoDireita{
