--- a/front/src/components/BtnCadastro.module.css
+++ b/front/src/components/BtnCadastro.module.css
@@ -1,9 +1,12 @@
 .btn{
     border-radius: 10px;
     height: 35px;
-    width: 170px;
+    width: 295px;
     border: none;
     background-color: #8C52FF;
     color: white;
     margin-top: 15px;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
 }
