--- a/front/src/components/CadastroProfessores.module.css
+++ b/front/src/components/CadastroProfessores.module.css
@@ -26,6 +26,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 448px;
     justify-content: center;
     border-radius: 0px 15px 15px 0px;
 }
@@ -56,7 +57,7 @@
     width: 100%;
 }
 
-.select{
+.select {
     border: none;
     border-radius: 3.5px;
     padding: 6px;
@@ -76,4 +77,27 @@
     .divdireita, .divesquerda {
         align-items: flex-start;
     }
+}
+
+.tituloCadastroProfessores {
+    font-size: 54px;
+    margin: -9px;
+    font-weight: bold;
+    margin-top: -9px;
+}
+
+.btnCadastro {
+    width: 49.8vw;
+    height: 7vh;
+    font-weight: bold;
+    font-size: 20px;
+    cursor: pointer;
+    background-color: #007bff; /* Cor inicial */
+    color: white;
+    border: none;
+    transition: background-color 0.3s ease;
+}
+
+.btnCadastro:hover {
+    background-color: #0056b3; /* Cor ao passar o mouse */
 }
