--- a/front/src/components/Dropdown.module.css
+++ b/front/src/components/Dropdown.module.css
@@ -5,11 +5,12 @@
     margin: 10px;
     top: 70px;
     position: relative;
+    box-sizing: border-box;
 }
 .imgzinha{
-width: 230px;
-height: 180px;
-border-radius: 7px;
+    width: 230px;
+    height: 180px;
+    border-radius: 7px;
 }
 .content {
     margin-left: 250px;
@@ -79,7 +80,7 @@ border-radius: 7px;
     opacity: 70%;
     letter-spacing: 1px;
     position: relative;
-    top: -50px;
+    top: -40px;
 }
 #nomePro{
     font-family: "Poppins", sans-serif;
@@ -90,8 +91,8 @@ border-radius: 7px;
 .cardizin{
     background-color: #fff;
     border-radius: 10px;
-    padding: 10px;
     margin: 10px;
+    padding: 10px;
     height: 263px;
 }
 .addButton{
@@ -102,6 +103,7 @@ border-radius: 7px;
     color: #fff;
     border-radius: 5px;
     position: relative;
+    top: -14px;
     left: 22px;
     font-family: "Poppins", sans-serif;
     font-weight: 500;
@@ -116,7 +118,7 @@ border-radius: 7px;
     height: 30px;
     position: relative;
     top: 30px;
-    left: 240px;
+    left: 248px;
     box-shadow: 0 8px 8px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     border: none;
@@ -127,7 +129,7 @@ border-radius: 7px;
     color: red;
     cursor: pointer;
     font-size: 1.2em;
-    margin-top: 5px;
+    margin-top: -22px;
 }
 .buttonContainer {
     display: flex;
@@ -141,7 +143,32 @@ border-radius: 7px;
 .editIcon a {
     color: white !important;
 }
-
 .dropdownIcon {
     margin-left: auto;
+}
+.dropdownHeader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.addButtonNovo{
+    background-color: #8C52FF;
+    width: 30px;
+    height: 30px;
+    border: none;
+    color: #fff;
+    border-radius: 50%;
+    position: relative;
+    font-size: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+.dropdownButton {
+    transition: transform 1.5s ease;
+}
+
+.dropdownButton::after {
+    transform: translateY(5px);
 }
