--- a/front/src/components/NavBarPerfil.module.css
+++ b/front/src/components/NavBarPerfil.module.css
@@ -11,6 +11,35 @@
     --preto: #000;
 }
 
+/* SCROLLSBARS========================== */
+.principal::-webkit-scrollbar {
+    width: 10px;
+}
+
+.principal::-webkit-scrollbar-thumb {
+    border: 10px solid var(--cinza-claro);
+}
+
+.prograList::-webkit-scrollbar {
+    width: 10px;
+}
+
+.prograList::-webkit-scrollbar-track {
+    background: var(--cinza-claro);
+    border-radius: 5px;
+}
+
+.prograList::-webkit-scrollbar-thumb {
+    background-color: var(--cor-principal);
+    border-radius: 5px;
+    border: 3px solid var(--cinza-claro);
+}
+
+.prograList::-webkit-scrollbar-thumb:hover {
+    background-color: var(--preto);
+}
+/*========================*/
+
 .principal {
     background-color: #fff;
     position: fixed;
@@ -18,6 +47,7 @@
     top: 0;
     right: 0;
     z-index: 1;
+    overflow: auto;
 }
 
 .logoNav {
@@ -40,6 +70,35 @@
     font-weight: bold;
 }
 
+.cardCriar {
+    background-color: var(--cor-principal);
+    border-radius: 15px;
+}
+
+.card {
+    padding: 11px;
+    margin-top: -8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+}
+
+.cardBotao {
+    display: flex;
+    justify-content: space-between;
+    padding: 7px;
+    width: 100%;
+    border: none;
+    background-color: var(--cor-principal);
+    box-shadow: -3px 7px 8px -2px rgba(0,0,0,0.60);
+    border-radius: 5px;
+    color: var(--branco);
+    font-weight: bold;
+    font-size: 15px;
+}
+
 .botao {
     padding: 10px;
     display: flex;
@@ -47,7 +106,7 @@
     align-items: center;
     border: none;
     background-color: var(--cor-principal);
-    border-radius: 10px;
+    border-radius: 15px;
     width: 300px;
     justify-content: center;
     color: var(--branco);
@@ -84,12 +143,6 @@
     width: 25px;
     height: 25px;
 }
-
-.card {
-    background-color: var(--cor-principal);
-    padding: 20px;
-}
-
 
 /*PROGRAMA*/
 
