--- a/front/src/components/CadastroAlunos.module.css
+++ b/front/src/components/CadastroAlunos.module.css
@@ -8,6 +8,14 @@
     box-shadow: 0px 5px rgba(0, 0, 0, 0.4);
 }
 
+.app{
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+
+
 .divdireita{
     background-color: #E9E9E9;
     display: flex;
