--- a/front/src/components/Calendario.module.css
+++ b/front/src/components/Calendario.module.css
@@ -117,3 +117,16 @@
 .holidayItemNovo {
     width: 100%;
 }
+
+@media(max-width: 1440px) {
+    .principal {
+        display: initial;
+    }
+}
+
+@media(max-width: 1024px) {
+    .holidayListsContainer {
+        display: initial;
+    }
+}
+
