--- a/front/src/components/TituloCadastro.module.css
+++ b/front/src/components/TituloCadastro.module.css
@@ -8,11 +8,9 @@
 
 @media (max-width: 768px) {
     .titulo{
-        font-size: 50px;
-        margin-top: 5px;
-        margin-inline: auto;
-    }
-    .titulo2{
-        font-size: 60px;
+        margin-top: 0px;
+        display: flex;
+        align-items: center;
+        font-size: 39px;
     }
 }
