--- a/front/src/components/TituloCadastro.module.css
+++ b/front/src/components/TituloCadastro.module.css
@@ -1,9 +1,9 @@
 .titulo{
-    font-size: 54px;
-    margin: 4px;
+    font-size: 49px;
+    margin: 34px;
     font-weight: bold;
     margin-top: -9px;
-    color: #8C52FF
+    color: #8C52FF;
 }
 .titulo2{
     font-size: 42px;
