--- a/front/src/components/CadastroAlunos.module.css
+++ b/front/src/components/CadastroAlunos.module.css
@@ -7,7 +7,6 @@
     grid-template-columns: 1fr 1fr;
     box-shadow: 0px 5px rgba(0, 0, 0, 0.4);
 }
-
 .app{
     display: flex;
     height: 100vh;
@@ -21,6 +20,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 
 .divesquerda{
@@ -28,6 +29,7 @@
     flex-direction: column;
     justify-content: center;
     gap: 70px;
+    align-items: center;
 }
 
 .divesquerda img{
