--- a/front/src/components/DashBoard.module.css
+++ b/front/src/components/DashBoard.module.css
@@ -150,3 +150,11 @@ body::-webkit-scrollbar-thumb {
     border: 3px solid #D9D9D9;
     padding: 2px;
 }
+:root {
+    --cor-principal: #8C52FF;
+    --branco: #fff;
+    --cinza-claro: #F0F0F0;
+    --cinza-escuro: #8A8C98;
+    --preto: #000;
+    background-color: #FFF;
+}
